Fix overflow problems

--- a/src/popup/styles/Popup.module.scss
+++ b/src/popup/styles/Popup.module.scss
@@ -1,13 +1,12 @@
 @use "@styles/base";
 
+body {
+  background: base.$darkgray;
+}
+
 .popup {
   max-width: 550px;
-  max-height: 600px;
-  overflow-y: scroll;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: base.$lightgray;
+  float: right;
 }
 
 .feedback {
